--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   "license": "MIT",
   "private": true,
   "author": "Daniel Giljam (https://github.com/DanielGiljam)",
-  "repository": "github:DanielGiljam/ia-2-017-0-lodge-broker"
+  "repository": "github:DanielGiljam/ia-2-017-0-lodge-broker",
+  "scripts": {
+    "start": "tsnd src/index.ts"
+  },
+  "devDependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5",
+    "ts-node-dev": "^1.0.0-pre.62",
+    "typescript": "^4.0.2"
+  }
 }
