--- a/package.json
+++ b/package.json
@@ -33,9 +33,20 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0",
     "mongoose": "^5.10.5",
     "prettier": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --cache --fix",
+    "*.{js,ts,yml,json,md}": "prettier --write"
   }
 }
