Refactors API_PORT to PORT and changes its value

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_PORT=45000
-
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=9bja8yksfz36
 MONGO_INITDB_DATABASE=ia-2-017-0-lodge-broker
 MONGO_CONTAINER_NAME=mongo
+
+PORT=3000
