--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "devDependencies": {
     "@danielgiljam/eslint-config": "^2.0.1",
     "@danielgiljam/prettierrc": "^2.0.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "bcrypt": "^5.0.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard-jsx": "^8.1.0",
@@ -36,7 +38,9 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "husky": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.3.0",
     "mongoose": "^5.10.5",
     "prettier": "^2.1.1",
