--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@danielgiljam/prettierrc": "^2.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "ajv": "^6.12.5",
     "bcrypt": "^5.0.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
