--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -45,6 +46,7 @@
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.3.0",
     "mongoose": "^5.10.5",
+    "morgan": "^1.10.0",
     "prettier": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
