--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@danielgiljam/prettierrc": "^2.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
+    "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
