--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.3.0",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "prettier": "^2.1.1",
